--- a/core-concepts/overview.mdx
+++ b/core-concepts/overview.mdx
@@ -1,9 +1,377 @@
 ---
 title: Overview
-description: QA.tech are approaching testing of web applications in a new way, this section covers the core concepts
+description: 'QA.tech approaches testing of web applications in a new way, combining AI agents with comprehensive knowledge graphs for intelligent, adaptive testing'
 icon: rocket
 ---
 
-## Testing with AI agents
+# Testing with AI Agents
 
-QA.tech is combining the best parts of automated tests - the speed, repeatability and
+QA.tech is revolutionizing how web applications are tested by combining the best parts of automated testing—speed, repeatability, and scalability—with the intelligence and adaptability of human testers.
+
+## The QA.tech Approach
+
+### Traditional Testing Limitations
+
+Traditional automated testing relies on rigid scripts that:
+
+- **Break with UI changes** - Any modification to selectors or page structure requires script updates
+- **Limited to predefined scenarios** - Can only test exactly what was scripted
+- **High maintenance burden** - Require constant updates as applications evolve
+- **Poor handling of dynamic content** - Struggle with modern web applications
+- **Expensive to scale** - Each new test requires manual scripting
+
+### AI Agent Testing Advantages
+
+Our AI agents overcome these limitations by:
+
+- **Adapting to changes automatically** - Learn and adjust to UI modifications
+- **Exploring beyond predefined paths** - Discover edge cases and unexpected scenarios
+- **Understanding context** - Comprehend the purpose and relationships of UI elements
+- **Continuous learning** - Improve test strategies based on results and feedback
+- **Natural language instructions** - Create tests using plain English descriptions
+
+## Core Architecture
+
+### 1. AI Agent Engine
+
+The heart of our system consists of intelligent agents that can:
+
+#### **Visual Understanding**
+- **Computer Vision** - See and interpret UI elements like humans
+- **Element Recognition** - Identify buttons, forms, links, and other interactive elements
+- **Context Awareness** - Understand the purpose and relationships of UI components
+- **Adaptive Navigation** - Find optimal paths through complex applications
+
+#### **Natural Language Processing**
+- **Instruction Understanding** - Parse natural language test descriptions
+- **Intent Recognition** - Understand what users want to test
+- **Goal-Oriented Behavior** - Focus on achieving specific testing objectives
+- **Dynamic Planning** - Create and adjust test strategies in real-time
+
+#### **Learning and Adaptation**
+- **Experience Accumulation** - Learn from each test run and interaction
+- **Pattern Recognition** - Identify common user flows and interaction patterns
+- **Error Recovery** - Handle unexpected situations and find alternative paths
+- **Performance Optimization** - Improve efficiency and reliability over time
+
+### 2. Knowledge Graph System
+
+Our system builds a comprehensive digital representation of your application:
+
+#### **Page Structure Analysis**
+- **Navigation Mapping** - Understand how pages connect and flow together
+- **Element Hierarchy** - Map the structure and relationships of UI components
+- **Interaction Patterns** - Identify common user behaviors and workflows
+- **Data Flow Understanding** - Track how information moves through the application
+
+#### **Dynamic Knowledge Updates**
+- **Real-time Learning** - Continuously update understanding as the application evolves
+- **Change Detection** - Automatically identify and adapt to UI modifications
+- **Context Preservation** - Maintain understanding across different test scenarios
+- **Relationship Mapping** - Build comprehensive models of application behavior
+
+### 3. Test Generation Engine
+
+Our AI automatically creates comprehensive test scenarios:
+
+#### **Intelligent Test Creation**
+- **User Flow Analysis** - Identify critical user journeys and workflows
+- **Edge Case Discovery** - Find potential failure points and unusual scenarios
+- **Coverage Optimization** - Ensure comprehensive testing of all features
+- **Scenario Prioritization** - Focus on high-impact and high-risk areas
+
+#### **Adaptive Test Strategies**
+- **Dynamic Test Planning** - Adjust strategies based on application behavior
+- **Risk-Based Testing** - Prioritize tests based on potential impact
+- **Performance Considerations** - Optimize for speed and resource efficiency
+- **Maintenance Reduction** - Create tests that require minimal ongoing updates
+
+## How AI Agents Work
+
+### Visual Understanding Process
+
+1. **Page Analysis** - Scan and understand the current page structure
+2. **Element Identification** - Recognize interactive elements and their purposes
+3. **Context Assessment** - Understand relationships between elements
+4. **Action Planning** - Determine the best way to achieve testing goals
+5. **Execution** - Perform actions with human-like precision and timing
+
+### Natural Language Processing
+
+1. **Instruction Parsing** - Convert natural language to structured test requirements
+2. **Goal Extraction** - Identify the specific objectives and success criteria
+3. **Strategy Development** - Create a plan to achieve the testing goals
+4. **Dynamic Adjustment** - Modify approach based on real-time feedback
+5. **Result Validation** - Verify that objectives were achieved
+
+### Adaptive Behavior
+
+1. **Learning from Experience** - Build knowledge from each test run
+2. **Pattern Recognition** - Identify common scenarios and optimal approaches
+3. **Error Recovery** - Handle unexpected situations gracefully
+4. **Performance Optimization** - Improve speed and reliability over time
+5. **Continuous Improvement** - Refine strategies based on results
+
+## Comparison with Traditional Testing
+
+### Traditional Script-Based Testing
+
+**Advantages:**
+- Fast execution for simple scenarios
+- Predictable results for regression testing
+- Good for repetitive, well-defined workflows
+- Lower initial setup for basic tests
+
+**Limitations:**
+- Brittle to UI changes and updates
+- Limited to exactly what was scripted
+- High maintenance burden as applications evolve
+- Poor handling of dynamic content and modern web apps
+- Expensive to scale and maintain
+- Cannot discover unexpected issues
+
+### QA.tech AI Agent Testing
+
+**Advantages:**
+- Adapts automatically to application changes
+- Discovers edge cases and unexpected issues
+- Natural language test creation
+- Continuous learning and improvement
+- Comprehensive coverage without manual scripting
+- Handles dynamic content and modern web applications
+- Scales efficiently with minimal maintenance
+
+**Best Applications:**
+- Dynamic applications with frequent UI changes
+- Complex user workflows and multi-step processes
+- Exploratory testing and edge case discovery
+- Applications with rich, interactive interfaces
+- Teams wanting to focus on strategic testing rather than script maintenance
+
+## Use Cases and Applications
+
+### E-commerce Testing
+
+**Product Discovery and Browsing**
+- Test product search and filtering functionality
+- Validate category navigation and product listings
+- Verify product detail pages and specifications
+- Test recommendation systems and related products
+
+**Shopping Cart and Checkout**
+- Validate cart functionality and item management
+- Test checkout flows and payment processing
+- Verify order confirmation and tracking
+- Test discount codes and promotional features
+
+**User Account Management**
+- Test registration and login processes
+- Validate profile management and preferences
+- Test order history and account settings
+- Verify security features and password management
+
+### SaaS Application Testing
+
+**User Onboarding and Registration**
+- Test signup flows and account creation
+- Validate email verification and activation
+- Test first-time user experiences and tutorials
+- Verify invitation and team management features
+
+**Core Feature Functionality**
+- Test main application features and workflows
+- Validate data creation, editing, and deletion
+- Test search and filtering capabilities
+- Verify reporting and analytics features
+
+**Integration and API Testing**
+- Test third-party service integrations
+- Validate webhook functionality and data flow
+- Test API endpoints and authentication
+- Verify data synchronization and consistency
+
+### Web Application Testing
+
+**Form Validation and User Input**
+- Test form submission and validation
+- Verify error handling and user feedback
+- Test file upload and data entry
+- Validate accessibility and usability features
+
+**Navigation and User Experience**
+- Test menu systems and page transitions
+- Validate responsive design across devices
+- Test loading states and performance
+- Verify accessibility compliance
+
+**Security and Authentication**
+- Test login and authentication flows
+- Validate session management and security
+- Test role-based access and permissions
+- Verify data protection and privacy features
+
+## Testing Scenarios
+
+### Positive Testing
+
+**Happy Path Validation**
+- Test normal user workflows and expected behaviors
+- Verify that features work as designed
+- Validate user interface and user experience
+- Test performance under normal conditions
+
+**Feature Integration**
+- Test how different features work together
+- Validate data flow between components
+- Test cross-feature dependencies
+- Verify end-to-end user journeys
+
+### Negative Testing
+
+**Error Handling**
+- Test application behavior with invalid inputs
+- Validate error messages and user feedback
+- Test boundary conditions and edge cases
+- Verify graceful degradation under stress
+
+**Edge Cases**
+- Test unusual user behaviors and inputs
+- Validate handling of unexpected scenarios
+- Test performance under extreme conditions
+- Verify security against malicious inputs
+
+### Performance Testing
+
+**Load Testing**
+- Test application behavior under various loads
+- Validate performance characteristics
+- Test scalability and resource usage
+- Verify response times and throughput
+
+**Stress Testing**
+- Test application limits and breaking points
+- Validate error handling under stress
+- Test resource management and recovery
+- Verify system stability under extreme conditions
+
+## Integration with Development Workflows
+
+### CI/CD Pipeline Integration
+
+**Automated Testing**
+- Run tests automatically on code changes
+- Validate deployments before production
+- Test across multiple environments
+- Provide immediate feedback to developers
+
+**Quality Gates**
+- Block deployments with failing tests
+- Ensure minimum test coverage requirements
+- Validate critical user journeys
+- Maintain quality standards automatically
+
+### Development Team Collaboration
+
+**Early Bug Detection**
+- Catch issues before they reach production
+- Provide detailed bug reports with reproduction steps
+- Reduce debugging time and effort
+- Improve code quality and reliability
+
+**Feature Validation**
+- Test new features as they're developed
+- Validate user experience and functionality
+- Ensure backward compatibility
+- Accelerate feature delivery
+
+### QA Team Enhancement
+
+**Strategic Focus**
+- Free QA teams from repetitive manual testing
+- Focus on creative testing scenarios
+- Improve test coverage and quality
+- Scale testing capacity without additional resources
+
+**Advanced Testing**
+- Perform exploratory testing and edge case discovery
+- Test complex user scenarios and workflows
+- Validate user experience and accessibility
+- Ensure comprehensive quality assurance
+
+## Getting Started with AI Agent Testing
+
+### Prerequisites
+
+Before implementing AI agent testing, ensure you have:
+
+- **Application Access** - Your application must be accessible for testing
+- **Test Environment** - A stable environment for running tests
+- **Authentication Setup** - Proper authentication for protected areas
+- **Basic Understanding** - Familiarity with testing concepts and objectives
+
+### Implementation Steps
+
+1. **Environment Setup**
+   - Configure your application for testing
+   - Set up authentication and access controls
+   - Prepare test data and scenarios
+   - Establish monitoring and reporting
+
+2. **Test Strategy Development**
+   - Identify critical user journeys
+   - Define testing objectives and success criteria
+   - Plan test coverage and priorities
+   - Establish quality metrics and thresholds
+
+3. **Initial Test Creation**
+   - Start with suggested tests for quick validation
+   - Create custom tests for specific scenarios
+   - Validate test results and accuracy
+   - Refine and optimize test strategies
+
+4. **Integration and Automation**
+   - Integrate with CI/CD pipelines
+   - Set up automated test execution
+   - Configure notifications and reporting
+   - Establish monitoring and alerting
+
+### Best Practices
+
+**Test Design**
+- Write clear, specific test descriptions
+- Focus on user value and business objectives
+- Include both positive and negative scenarios
+- Plan for maintenance and evolution
+
+**Environment Management**
+- Maintain stable test environments
+- Use realistic test data and scenarios
+- Monitor performance and resource usage
+- Plan for scalability and growth
+
+**Quality Assurance**
+- Validate test results and accuracy
+- Monitor false positives and negatives
+- Continuously improve test strategies
+- Maintain comprehensive documentation
+
+## Next Steps
+
+Ready to implement AI agent testing? Here's your recommended path:
+
+1. **[Creating Tests](/best-practices/creating-tests)** - Learn how to write effective test cases using natural language
+2. **[Configuration](/configuration/github)** - Set up your environment and integrations
+3. **[Test Features](/test-features/email-inbox)** - Explore advanced testing capabilities
+4. **[Running Tests](/best-practices/running-tests)** - Execute and manage your test suite
+5. **[Results and Analysis](/best-practices/test-results)** - Understand and act on test results
+
+### Advanced Topics
+
+Once you're comfortable with the basics:
+
+- **[Performance Optimization](/core-concepts/output-state-optimization)** - Learn how to optimize test execution and resource usage
+- **[Advanced Troubleshooting](/best-practices/troubleshooting)** - Handle complex issues and edge cases
+- **[Enterprise Features](/core-concepts/applications-and-environments)** - Scale testing across multiple environments and teams
+- **[Integrations](/integrations/jira)** - Connect with your existing development and project management tools
+
+Transform your testing approach with AI agents and achieve comprehensive quality assurance with minimal manual effort.
